<resources>

    <string name="app_name">Natura Reciclagem</string>
    <string name="app_logo">Logo Natura</string>
    <string name="btn_login">Login</string>
    <string name="id">ID</string>
    <string name="senha">Senha</string>
    <string name="reciclagem">Reciclagem</string>
    <string name="usuario">consultor</string>
    <string name="bemvindo">Bem Vindo ao Reciclagem Natura!</string>
    <string name="cadastro_produtos">Cadastro de Produtos</string>
    <string name="ranking_consultores">Ranking Consultores</string>
    <string name="lista_de_coleta">Lista de Coleta</string>
    <string name="lista_de_beneficios">Lista de Benefícios</string>
    <string name="pontos_de_coleta">Pontos de Coleta</string>
    <string name="titulo_cliente">Cliente: </string>
    <string name="titulo_consultor">Consultor(a): </string>
    <string name="titulo_produtos">Produto: </string>
    <string name="item">Item</string>
    <string name="titulo_quantidade">Qtd: </string>
    <string name="enviar">Enviar</string>
    <string name="teste">Teste</string>
    <string name="listar_produtos_por">Listar Produtos por: </string>
    <string name="titulo_por_cliente">Por Cliente: </string>
    <string name="titulo_por_situacao">Por Situação: </string>
    <string name="titulo_situacao">Situação: </string>
    <string name="item_teste">Item Teste</string>
    <string name="numero_teste">20</string>
    <string name="titulo_itens">Itens: </string>
    <string name="titulo_pontos">Pontos: </string>
    <string name="titulo_total">Total: </string>
    <string name="coletados">Coletados</string>
    <string name="a_coletar">A Coletar</string>
    <string name="pontos_teste">1000 pts</string>
    <string name="pontos_zerados">0 pts</string>
    <string name="produto_teste">Produto Teste</string>
    <string name="preco_teste">R$ 100,00</string>
    <string name="btn_resgatar">Resgatar</string>
    <string name="mensal">Mensal</string>
    <string name="anual">Anual</string>
    <string name="codigo">Código</string>
    <string name="nome">Nome</string>
    <string name="pontos">Pontos</string>
    <string name="pesquisar_ponto_de_coleta">Pesquisar Ponto de Coleta</string>
    <string name="teste_mensal">Teste Mensal</string>
    <string name="teste_anual">Teste Anual</string>
    <string name="titulo_lista_de_produtos">Lista de Produtos: </string>
    <string name="perfume_kaiak">Perfume Kaiak</string>
    <string name="produtos_ekos">Produtos Ekos</string>
    <string name="coletado">Coletado</string>
    <string name="salvar">Salvar</string>
    <string name="buscar">Buscar</string>
    <string name="natura_reciclagem">Natura Reciclagem</string>

    <string-array name="menu">
        <item>Início</item>
        <item>Cadastro de Produtos</item>
        <item>Lista de Coleta</item>
        <item>Lista de Benefícios</item>
        <item>Ranking Consultores</item>
        <item>Pontos de Coleta</item>
        <item>Sair</item>
    </string-array>

    <string-array name="cmbClientes">
        <item>Cliente Teste 1</item>
        <item>Cliente Teste 2</item>
        <item>Cliente Teste 3</item>
    </string-array>

    <string-array name="cmbSituacao">
        <item>Coletado</item>
        <item>Não Coletado</item>
    </string-array>

    <string-array name="sp_estado">
        <item>SP</item>
        <item>RJ</item>
        <item>PR</item>
    </string-array>

    <string-array name="sp_cidade">
        <item>São Paulo</item>
        <item>Osasco</item>
        <item>Barueri</item>
    </string-array>

    <string-array name="sp_bairro">
        <item>Bairro Teste 1</item>
        <item>Bairro Teste 2</item>
        <item>Bairro Teste 3</item>
    </string-array>

</resources>
