<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/whiteSmoke"
    tools:context=".ListaColetaFragment">

    <TextView android:id="@+id/lblTituloLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lista_de_coleta"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:fontFamily="sans-serif-condensed"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <TextView android:id="@+id/lblConsultorLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_consultor"
        android:layout_below="@id/lblTituloLista"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/darkOrange"/>

    <TextView android:id="@+id/lblNomeConsultorLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teste"
        android:layout_toEndOf="@id/lblConsultorLista"
        android:layout_below="@id/lblTituloLista"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"/>

    <TextView android:id="@+id/lblFiltroLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar_produtos_por"
        android:layout_below="@id/lblConsultorLista"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/darkOrange"/>

    <TextView android:id="@+id/lblPorClienteLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_cliente"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/lblFiltroLista"
        android:layout_marginStart="20dp"
        android:textColor="@color/darkOrange"/>



    <Spinner android:id="@+id/spClientesLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblPorClienteLista"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:entries="@array/cmbClientes"/>



    <TextView
        android:id="@+id/lblProdutosLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/titulo_lista_de_produtos"
        android:layout_below="@id/spClientesLista"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/orangeRed"/>

    <TextView android:id="@+id/lblItemLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_itens"
        android:textSize="15sp"
        android:textColor="@color/darkOrange"
        android:layout_below="@id/lblProdutosLista"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp" />

    <TextView android:id="@+id/lblQtdLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_quantidade"
        android:textSize="15sp"
        android:textColor="@color/darkOrange"
        android:layout_below="@id/lblProdutosLista"
        android:layout_marginStart="170dp"
        android:layout_marginTop="15dp" />

    <TextView android:id="@+id/lblPontosLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_pontos"
        android:textSize="15sp"
        android:textColor="@color/darkOrange"
        android:layout_below="@id/lblProdutosLista"
        android:layout_marginStart="220dp"
        android:layout_marginTop="15dp" />

    <TextView android:id="@+id/lblPorSituacaoLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_situacao"
        android:textSize="18sp"
        android:layout_toEndOf="@id/lblPorClienteLista"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/lblProdutosLista"
        android:layout_marginStart="240dp"
        android:textColor="@color/darkOrange"/>

    <!-- EXIBIR UMA LISTA -->

    <TextView android:id="@+id/vlItemLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_teste"
        android:textSize="15sp"
        android:layout_below="@id/lblItemLista"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp" />

    <TextView android:id="@+id/vlQtdLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_teste"
        android:textSize="15sp"
        android:layout_below="@id/lblItemLista"
        android:layout_marginStart="170dp"
        android:layout_marginTop="15dp" />

    <TextView android:id="@+id/vlPontosLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_teste"
        android:textSize="15sp"
        android:layout_below="@id/lblItemLista"
        android:layout_marginStart="220dp"
        android:layout_marginTop="15dp" />

    <CheckBox android:id="@+id/chColetado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblItemLista"
        android:layout_marginStart="300dp"
        android:layout_marginTop="10dp"
        android:text="@string/coletado"/>

    <!-- EXIBIR UMA LISTA -->

    <TextView android:id="@+id/lblTotalLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/titulo_total"
        android:textSize="25sp"
        android:textColor="@color/orangeRed" />

    <TextView android:id="@+id/lblColetadosLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coletados"
        android:textColor="@color/darkOrange"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="50dp"/>

    <TextView android:id="@+id/lblAColetarLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_coletar"
        android:textColor="@color/darkOrange"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/lblColetadosLista"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="50dp"/>

    <TextView android:id="@+id/txtPontosColetadosLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pontos_teste"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="20dp"/>

    <TextView android:id="@+id/txtPontosAColetarLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pontos_teste"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="260dp"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
